--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Workout Trainer</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- index.html -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="alternate icon" href="favicon.ico">
+    <meta name="theme-color" content="#111827">
   </head>
   <body class="min-h-screen bg-gray-50">
     <div id="root"></div>
