--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Workout Trainer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- index.html -->
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg?v=2">
     <link rel="alternate icon" href="favicon.ico">
     <meta name="theme-color" content="#111827">
   </head>
