--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Workout Trainer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- index.html -->
+    <!-- mobile viewport, safe areas, and icons -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="icon" type="image/svg+xml" href="favicon.svg?v=3">
-    <link rel="alternate icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png?v=1">
     <meta name="theme-color" content="#111827">
   </head>
   <body class="min-h-screen bg-gray-50">
