--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- mobile viewport, safe areas, and icons -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg?v=3">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png?v=1">
+    <meta name="theme-color" content="#111827">
+
     <title>Workout Trainer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- mobile viewport, safe areas, and icons -->
