Add apple-touch-icon and mobile viewport

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <!-- Critical for iPhone layout + notch support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title>Workout Trainer</title>
     <meta name="description" content="Track daily strength and cardio workouts." />
     <meta name="theme-color" content="#111827" />
@@ -15,11 +16,12 @@
 
     <!-- Favicons (make sure these files exist in /public) -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111827" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111827" />
+    <link rel="manifest" href="site.webmanifest">
 
 
     <!-- Minimal safe-area + full-height baseline for mobile -->
